- Added 'View Pets' icon button in the actions column for Owner Management - Added titles for action icons in both Pet Management and Owner Management components

--- a/src/app/components/pet-management/pet-management.component.html
+++ b/src/app/components/pet-management/pet-management.component.html
@@ -156,10 +156,10 @@
                             <td class="px-5 py-3">Dog</td>
                             <td class="px-5 py-3">Poodle</td>
                             <td class="flex items-center justify-start px-5 py-3 space-x-2">
-                              <button (click)="openEditModal()">
+                              <button (click)="openEditModal()" title="Edit pet info">
                                 <i class="fas fa-pencil-alt"></i>
                             </button>
-                            <button>
+                            <button title="Delete pet">
                                 <i class="fas fa-trash"></i>
                             </button>
                             </td>
