--- a/src/app/components/owner-management/owner-management.component.html
+++ b/src/app/components/owner-management/owner-management.component.html
@@ -153,10 +153,13 @@
                       <td class="px-5 py-3">123-456-7890</td>
                       <td class="px-5 py-3">123 Main St, Anytown</td>
                       <td class="flex items-center justify-start px-5 py-3 space-x-2">
-                        <button onclick="openEditOwnerModal(1)">
+                        <button title="View Pets">
+                          <i class="text-gray-600 fas fa-paw"></i>
+                        </button>
+                        <button onclick="openEditOwnerModal(1)" title="Edit owner info">
                           <i class="fas fa-pencil-alt"></i>
                         </button>
-                        <button onclick="deleteOwner(1)">
+                        <button onclick="deleteOwner(1)" title="Delete owner">
                           <i class="fas fa-trash"></i>
                         </button>
                       </td>
