--- a/src/app/components/pet-management/pet-management.component.html
+++ b/src/app/components/pet-management/pet-management.component.html
@@ -207,5 +207,5 @@
         // ... existing modal script ...
     </script>
 </body>
-<app-pet-edit *ngIf="(modalService.watch() | async) === 'open'"></app-pet-edit>
+<app-pet-edit *ngIf="(modalService.watch() | async) === ModalType.PetEdit"></app-pet-edit>
 </html>
