--- a/src/app/components/owner-management/owner-management.component.html
+++ b/src/app/components/owner-management/owner-management.component.html
@@ -153,7 +153,7 @@
                       <td class="px-5 py-3">123-456-7890</td>
                       <td class="px-5 py-3">123 Main St, Anytown</td>
                       <td class="flex items-center justify-start px-5 py-3 space-x-2">
-                        <button title="View Pets">
+                        <button title="View Pets" (click)="viewOwnerPets(owner.id)">
                           <i class="text-gray-600 fas fa-paw"></i>
                         </button>
                         <button (click)="openEditOwnerModal()" title="Edit owner info">
