--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,8 +25,8 @@
         <nav class="hidden md:block">
           <ul class="flex">
             <li><a href="#dashboard" class="px-4 py-2 text-sm text-white hover:underline">Dashboard</a></li>
-            <li><a href="#login" class="px-4 py-2 text-sm text-white hover:underline">Login</a></li>
-            <li><a href="#management" class="px-4 py-2 text-sm text-white hover:underline">Management</a></li>
+            <li><a [routerLink]="['/login']" class="px-4 py-2 text-sm text-white hover:underline">Login</a></li>
+            <li><a [routerLink]= "['/pet-management']" class="px-4 py-2 text-sm text-white hover:underline">Management</a></li>
             <li><a href="#admin" class="px-4 py-2 text-sm text-white hover:underline">Administrator Features</a></li>
             <li><a href="#features" class="px-4 py-2 text-sm text-white hover:underline">Additional Features</a></li>
           </ul>
@@ -57,7 +57,7 @@
               </div>
               <a href="#" class="text-sm text-purple-600 hover:underline">Sign Up</a>
             </div>
-            <button type="submit" class="w-full px-4 py-2 text-sm font-bold text-white bg-purple-700 rounded hover:bg-purple-800 focus:outline-none focus:ring focus:ring-purple-300">Login</button>
+            <button type="submit" class="w-full px-6 py-3 mr-4 text-white bg-purple-700 rounded w">Login</button>
           </form>
           <div class="flex items-center justify-between mt-4">
             <hr class="w-full" />
@@ -65,8 +65,8 @@
             <hr class="w-full" />
           </div>
           <div>
-            <button class="w-full px-4 py-2 mb-2 text-sm font-bold text-white bg-blue-500 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">Login with Google</button>
-            <button class="w-full px-4 py-2 text-sm font-bold text-white bg-blue-700 rounded hover:bg-blue-800 focus:outline-none focus:ring focus:ring-blue-300">Login with Facebook</button>
+            <button class="w-full px-6 py-3 mb-2 mr-4 text-white bg-blue-500 rounded w hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">Login with Google</button>
+            <button class="w-full px-6 py-3 mb-2 mr-4 text-white bg-blue-700 rounded w hover:bg-blue-800 focus:outline-none focus:ring focus:ring-blue-300">Login with Facebook</button>
           </div>
           <p class="text-xs text-center text-gray-400">Your data is safe with us</p>
         </div>
