- Add register component and update routing accordingly.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -55,7 +55,7 @@
                 <input id="remember-me" type="checkbox" class="w-4 h-4 border-gray-300 rounded focus:ring-purple-500">
                 <label for="remember-me" class="block ml-2 text-sm text-gray-800">Remember Me</label>
               </div>
-              <a href="#" class="text-sm text-purple-600 hover:underline">Sign Up</a>
+              <a [routerLink]="['/register']" class="text-sm text-purple-600 hover:underline">Sign Up</a>
             </div>
             <button type="submit" class="w-full px-6 py-3 mr-4 text-white bg-purple-700 rounded w">Login</button>
           </form>
