--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,7 +25,9 @@
         <nav class="hidden md:block">
           <ul class="flex">
             <li><a href="#dashboard" class="px-4 py-2 text-sm text-white hover:underline">Dashboard</a></li>
-            <li><a [routerLink]="['/login']" class="px-4 py-2 text-sm text-white hover:underline">Login</a></li>
+            <li *ngIf="!isAuthenticated"><a [routerLink]="['/login']" class="px-4 py-2 text-sm text-white hover:underline">Login</a></li>
+            <li *ngIf="isAuthenticated"><a [routerLink]="['/login']" (click)="logout()" class="px-4 py-2 text-sm text-white hover:underline">Logout</a></li>
+            <p>Tukaj: {{ isAuthenticated }}</p>
             <li><a [routerLink]= "['/pet-management']" class="px-4 py-2 text-sm text-white hover:underline">Management</a></li>
             <li><a href="#admin" class="px-4 py-2 text-sm text-white hover:underline">Administrator Features</a></li>
             <li><a href="#features" class="px-4 py-2 text-sm text-white hover:underline">Additional Features</a></li>
@@ -38,14 +40,14 @@
       <div class="flex flex-wrap items-center justify-center min-h-full p-4">
         <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-lg shadow-lg lg:w-1/2">
           <h2 class="text-3xl font-bold text-center text-gray-800">Login to Your Account</h2>
-          <form class="space-y-4">
+          <form class="space-y-4" (ngSubmit)="login()" #loginForm="ngForm">
             <div>
-              <label for="email" class="block text-sm font-semibold text-gray-700">Email</label>
-              <input type="email" id="email" class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200" placeholder="Enter your email" required>
+              <label for="email" class="block text-sm font-semibold text-gray-700" >Email</label>
+              <input type="email" id="email" name="email" [(ngModel)]="email" class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200" placeholder="Enter your email" required>
             </div>
             <div>
-              <label for="password" class="block text-sm font-semibold text-gray-700">Password</label>
-              <input type="password" id="password" class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200" placeholder="Enter your password" required>
+              <label for="password" class="block text-sm font-semibold text-gray-700" >Password</label>
+              <input type="password" id="password" name="password" [(ngModel)]="password" class="w-full px-4 py-2 mt-1 border rounded-md focus:border-purple-500 focus:ring focus:ring-purple-200" placeholder="Enter your password" required>
               <div class="flex justify-end mt-1">
                 <a href="#" class="text-xs text-purple-600 hover:underline">Forgot Password?</a>
               </div>
@@ -58,6 +60,10 @@
               <a [routerLink]="['/register']" class="text-sm text-purple-600 hover:underline">Sign Up</a>
             </div>
             <button type="submit" class="w-full px-6 py-3 mr-4 text-white bg-purple-700 rounded w">Login</button>
+            <p>Here:</p>
+            <div *ngIf="errorMessage" class="text-red-600">
+              {{ errorMessage }}
+            </div>
           </form>
           <div class="flex items-center justify-between mt-4">
             <hr class="w-full" />
@@ -100,4 +106,5 @@
   </div>
 
 </body>
+<app-register *ngIf=""></app-register>
 </html>
