--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -1,9 +1,9 @@
-<nz-header class="flex items-center justify-center bg-gradient-to-r from-purple-500 to-purple-700 shadow-md h-[5rem] px-4">
-  <div class="flex items-center">
+<nz-header class="flex items-center justify-center px-4 shadow-md">
+  <div class="flex items-center mr-24">
     <img src="https://placehold.co/150x50" alt="Veterinary Institute VZ Logo" class="h-12 mr-4">
-    <span class="text-2xl font-bold">Veterinary Institute VZ</span>
+    <span class="text-2xl font-bold text-gray-400">Veterinary Institute VZ</span>
   </div>
-  <ul nz-menu nzMode="horizontal" nzTheme="dark" nzSelectedKeys="['home']" class="ml-40 text-white" style="background-color: transparent;">
+  <ul nz-menu nzMode="horizontal" nzTheme="dark" nzSelectedKeys="['home']">
     <li nz-menu-item [routerLink]="['/home']">Dashboard</li>
     <li nz-submenu nzTitle="Login">
       <ul>
