--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -36,7 +36,11 @@ nz-content {
   /* flex: 1; */
   /* margin-top: 64px; */
 }
-
+/*
 nz-footer {
   text-align: center;
-}
+} */
+
+/* nz-footer h3.ant-typography {
+  color: white !important;
+} */
