Added new components, refactored login layout, and adjusted global styles
- Added `LoginFormComponent` and `LoginImageComponent` to improve modularity in the login section.
- Refactored login page to use new components and simplify the layout structure.
- Commented out unused CSS in `app.component.css` for cleaner code.
- Added global CSS rule to apply an outline to all elements for easier debugging.
- Made minor UI adjustments in `header.component.html`.

--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -4,7 +4,7 @@
     <span class="text-2xl font-bold text-gray-400">Veterinary Institute VZ</span>
   </div>
   <ul nz-menu nzMode="horizontal" nzTheme="dark" nzSelectedKeys="['home']">
-    <li nz-menu-item [routerLink]="['/home']">Dashboard</li>
+    <li nz-menu-item [routerLink]="['/home']">Home</li>
     <li nz-submenu nzTitle="Login">
       <ul>
         <li nz-menu-item [routerLink]="['/login']">Pet and Owner Management</li>
