--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-:host {
+/* :host {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -76,4 +76,4 @@ nz-content {
   padding: 24px;
   background: #fff;
   height: 100%;
-}
+} */
