Added validation to PetDTO, implemented pagination, and expanded  API features
- Added  validations to `PetDTO` fields for stronger input validation.
- Implemented pagination support for pet retrieval in the service layer and added the corresponding method to fetch paginated pets.
- Created `PetWithSpeciesAndBreedDto` to return more detailed pet information, including species and breed names.
- Introduced a new OpenAPI configuration for API documentation, including JWT security setup.
- Enhanced the `PetMapper` with a custom mapping for owner's name and added mappings for species and breed.
- Created a new `PetController` to handle CRUD operations and provide paginated results for pets, integrated with Swagger documentation for API endpoints.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,19 +1,19 @@
-<nz-footer class="py-8 text-center text-white bg-black" >
+<nz-footer class="py-8 text-center text-white bg-black">
   <div nz-row class="container mx-auto">
-      <div nz-col nzSpan="12" class="mb-6">
-          <h3 nz-title level="3" class="mb-4 !text-white">Veterinary Institute VZ</h3>
-          <p class="mb-2">123 Vet Street, Petville, PA 12345</p>
-          <p class="mb-2">Email: contact@veterinaryvz.com</p>
-          <p>Phone: (123) 456-7890</p>
-      </div>
-      <div nz-col nzSpan="12">
-          <nz-list nzMode="horizontal">
-              <nz-list-item><a href="#privacy" class="text-white hover:text-gray-400">Privacy Policy</a></nz-list-item>
-              <nz-list-item><a href="#terms" class="text-white hover:text-gray-400">Terms of Use</a></nz-list-item>
-              <nz-list-item><a href="#disclaimer" class="text-white hover:text-gray-400">Legal Disclaimer</a></nz-list-item>
-              <nz-list-item><a href="#contact" class="text-white hover:text-gray-400">Contact Us</a></nz-list-item>
-              <nz-list-item><a href="#about" class="text-white hover:text-gray-400">About Us</a></nz-list-item>
-          </nz-list>
-      </div>
+    <div nz-col nzSpan="12" class="mb-6">
+      <h3 nz-title level="3" class="mb-4 !text-white">
+        Veterinary Institute VZ
+      </h3>
+      <p class="mb-2">123 Vet Street, Petville, PA 12345</p>
+      <p class="mb-2">Email: contact@veterinaryvz.com</p>
+      <p>Phone: (123) 456-7890</p>
+    </div>
+    <div nz-row nzSpan="24" class="flex justify-center gap-8">
+      <div nz-col class="text-white hover:text-gray-400">Privacy Policy</div>
+      <div nz-col class="text-white hover:text-gray-400">Terms of Us</div>
+      <div nz-col class="text-white hover:text-gray-400">Legal Disclaimer</div>
+      <div nz-col class="text-white hover:text-gray-400">Contact Us</div>
+      <div nz-col class="text-white hover:text-gray-400">About Us</div>
+    </div>
   </div>
 </nz-footer>
