Added dynamic authentication handling in header and refactor login/logout flow
- Updated header to dynamically change between "Login" and "Logout" based on authentication status.
- Added `handleAuthAction` method in the header to handle login/logout actions.
- Refined login form to update authentication status without console logs.
- Cleaned up console log from pet management component.

--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -5,7 +5,7 @@
   </div>
   <ul nz-menu nzMode="horizontal" nzTheme="dark" nzSelectedKeys="['home']">
     <li nz-menu-item [routerLink]="['/home']">Home</li>
-    <li nz-submenu nzTitle="Login">
+    <li nz-submenu [nzTitle]="authTitle" (click)="handleAuthAction()">
       <ul>
         <li nz-menu-item [routerLink]="['/login']">Pet and Owner Management</li>
         <li nz-menu-item><a href="#vaccination">Vaccination Records</a></li>
