- Disabled the editing of an owner whilst in edit mode.

--- a/src/app/components/pet-management/pet-management.component.html
+++ b/src/app/components/pet-management/pet-management.component.html
@@ -54,7 +54,7 @@
             <!-- Editing mode -->
             <ng-template #editing>
               <td><input type="text" nz-input [(ngModel)]="editCache[pet.uuid].data.nickname" /></td>
-              <td><input type="text" nz-input [(ngModel)]="editCache[pet.uuid].data.ownerName" /></td>
+              <td><input disabled="true" type="text" nz-input [(ngModel)]="editCache[pet.uuid].data.ownerName" /></td>
               <td>
                 <nz-select
                   class="w-full"
