Added owner management module and enhanced pet management features
- Added routes and components for Owner Management and Owner Edit.
- Implemented form handling and validation for owner management.
- Enhanced pet management with search functionality and inline editing.
- Updated service methods for pet creation, updating, and retrieval.
- Applied minor UI improvements in styles for modals.

--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -12,8 +12,8 @@
         <li nz-menu-item><a href="#reporting">Reporting</a></li>
       </ul>
     </li>
-    <li nz-menu-item [routerLink]="['/pet-management']">Management</li>
-    <li nz-menu-item><a href="#admin">Administrator Features</a></li>
+    <li nz-menu-item [routerLink]="['/pet-management']">Pet Management</li>
+    <li nz-menu-item [routerLink]="['/owner-management']">Owner Management </li>
     <li nz-menu-item><a href="#features">Additional Features</a></li>
   </ul>
 </nz-header>
